# minimus-product-service

./: pyproject.toml
api/: endpoints.py  routes.py
db/: connection.py  services.py
